--- a/src/components/layouts/DefaultLayout/main.scss
+++ b/src/components/layouts/DefaultLayout/main.scss
@@ -1,9 +1,9 @@
 .main-pages{
     margin-top: 60px;
-    padding-left: 48px;
+    padding-left: 55px;
     padding-top: 12px;
     display: block;
-    margin-left: 66px;
+    // margin-left: 66px;
     // width: 1410px;
     // height: 1000px;
 }
