--- a/src/components/component/Header/main.scss
+++ b/src/components/component/Header/main.scss
@@ -1,4 +1,6 @@
+
 .navbar{
+    align-items: center;
     width: 100%;
     min-height: 60px;
     background-color: #fff;
@@ -7,10 +9,67 @@
     left: 0;
     box-shadow: 0 1px 5px #00000040;
     display: flex;
-    justify-content: flex-end!important;
+    // justify-content: flex-end!important;
     align-items: center;
     z-index: 999;
     position: fixed!important;
+
+    .header-name{
+        margin-top: 10px;
+        margin-left:  40px;
+        font-size: 25px;
+        font-weight: 700;
+        
+    }
+    // .button-btn{
+    //     background-color: #ccc;
+    //     margin: 5px;
+    //     height: 35px;
+    //     border-radius: 50px;
+    // }
+    .item-selected{
+        background-color: #49cea1!important;
+        color: #fff!important;
+    }
+    .button-btn {
+        background-color: #ccc;
+        margin: 5px;
+        height: 40px;
+        border-radius: 50px;
+        position: relative;
+        display: inline-block;
+        font-size: 16px;
+        text-align: center;
+        color: black;
+        border-radius: 5px;
+        overflow: hidden;
+        cursor: pointer;
+        transition: color 0.3s ease-in-out;
+        z-index: 1;
+      }
+     
+      .button-btn::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(to right, #fff, #fff);
+        transform: translateX(-100%);
+        transition: transform 0.3s ease-in-out;
+        z-index: -1;
+      }
+
+      .button-btn:hover{
+        color: black!important;
+      }
+  
+      .button-btn:hover::before,
+      .button-btn:active::before {
+        transform: translateX(0);
+      }
+    
     .icon{
         cursor: pointer;
         height: 36px;
