--- a/src/pages/InforDevice/main.scss
+++ b/src/pages/InforDevice/main.scss
@@ -1,3 +1,21 @@
 .main-content{
-    margin-top: 60px;
+    width: 100%;
+    height: 100%;
+    margin-top: 10%;
+    // display: flex;
+    // flex-direction: row;
+    .modal-device{
+        position: fixed;
+        width: 25%;
+        border-color: black;
+        border-width: 2px;
+        margin-left: 6%;
+        // display: flex;
+        // flex-direction: column;
+        // justify-content: center;
+        // align-items: center;
+        .col-md-6{
+            width: 100%;
+        }
+    }
 }
